more clean ups